# VoiceNotes

./: .cursorrules  .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  architecture.md  environment.yml  pyproject.toml  pytest.ini  quickstart.md  requirements.txt  setup.cfg  setup.sh  tox.ini
.cursor/: config.json
.cursor/rules/: agent-standards.mdc
.github/workflows/: ci.yml
docs/: INSTALL.md  usage.md
scripts/: __init__.py  check_standards_reference.py  voice-notes
src/voice_notes/: __init__.py  cli.py  formatting.py  io_utils.py  summarize.py  transcribe.py  whisperx_tools.py  wrapper.py
tests/: __init__.py  conftest.py  test_cli.py  test_formatting.py  test_io_utils.py  test_summarize.py  test_transcribe.py  test_whisperx_tools.py  test_wrapper.py
